Fixed flicker issue when loading a photowall

--- a/css/Client/Page/Stream/Stream.css
+++ b/css/Client/Page/Stream/Stream.css
@@ -43,6 +43,7 @@
     padding-right: 1em;
 }
 
-.important-hide {
-    display: none !important;
+#stream_loading_container.block-loading {
+    min-height: 250px;
+    border-radius: 0.5em;
 }
